--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ antlr4-python3-runtime==4.9.3
 anyio==3.6.2
 appdirs==1.4.4
 argilla==1.5.0
+asttokens==2.2.1
 async-timeout==4.0.2
 attrs==22.2.0
+backcall==0.2.0
 backoff==2.2.1
 black==21.4b2
 cachetools==5.3.0
@@ -16,14 +18,18 @@ charset-normalizer==3.1.0
 click==8.1.3
 cloudpickle==2.2.1
 colorama==0.4.6
+comm==0.1.3
 commonmark==0.9.1
 contourpy==1.0.7
 cryptography==40.0.1
 cycler==0.11.0
 dataclasses-json==0.5.7
+debugpy==1.6.6
+decorator==5.1.1
 Deprecated==1.2.13
 effdet==0.3.0
 et-xmlfile==1.1.0
+executing==1.2.0
 fastapi==0.95.0
 filelock==3.10.6
 fonttools==4.39.2
@@ -41,8 +47,13 @@ huggingface-hub==0.13.3
 hydra-core==1.3.2
 idna==3.4
 iopath==0.1.9
+ipykernel==6.22.0
+ipython==8.11.0
+jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
+jupyter_client==8.1.0
+jupyter_core==5.3.0
 kiwisolver==1.4.4
 langchain==0.0.123
 layoutparser==0.3.4
@@ -52,10 +63,12 @@ MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 matplotlib==3.7.1
+matplotlib-inline==0.1.6
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
+nest-asyncio==1.5.6
 networkx==3.0
 nltk==3.8.1
 numpy==1.23.5
@@ -65,13 +78,19 @@ opencv-python==4.6.0.66
 openpyxl==3.1.2
 packaging==23.0
 pandas==1.5.3
+parso==0.8.3
 pathspec==0.11.1
 pdf2image==1.16.3
 pdfminer.six==20221105
 pdfplumber==0.8.0
+pickleshare==0.7.5
 Pillow==9.4.0
+platformdirs==3.2.0
 portalocker==2.7.0
+prompt-toolkit==3.0.38
 protobuf==4.22.1
+psutil==5.9.4
+pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycocotools==2.0.6
@@ -90,6 +109,7 @@ python-pptx==0.6.21
 pytz==2023.2
 pywin32==306
 PyYAML==6.0
+pyzmq==25.0.2
 regex==2023.3.23
 requests==2.28.2
 requests-oauthlib==1.3.1
@@ -100,6 +120,7 @@ scipy==1.10.1
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.47
+stack-data==0.6.2
 starlette==0.26.1
 sympy==1.11.1
 tabulate==0.9.0
@@ -112,7 +133,9 @@ timm==0.6.13
 toml==0.10.2
 torch==2.0.0
 torchvision==0.15.1
+tornado==6.2
 tqdm==4.65.0
+traitlets==5.9.0
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 unstructured==0.5.7
@@ -120,6 +143,7 @@ unstructured-inference==0.2.4
 urllib3==1.26.15
 uvicorn==0.21.1
 Wand==0.6.11
+wcwidth==0.2.6
 Werkzeug==2.2.3
 wincertstore==0.2
 wrapt==1.14.1
